@@ -3,7 +3,7 @@
 # Copyright (c) 2003 ActiveState Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: pkgIndex.tcl,v 1.9 2009/05/21 16:32:24 andreas_kupries Exp $
+# RCS: @(#) $Id: pkgIndex.tcl,v 1.10 2010/07/07 20:38:18 andreas_kupries Exp $
 
 package ifneeded ico 0.3.1 [list source [file join $dir ico0.tcl]]
-package ifneeded ico 1.0.4 [list source [file join $dir ico.tcl]]
+package ifneeded ico 1.0.5 [list source [file join $dir ico.tcl]]
